; ModuleID = '/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb.c_cdb_find.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb.c_cdb_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdb = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cdb_find(%struct.cdb* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.cdb*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.cdb* %0, %struct.cdb** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.cdb*, %struct.cdb** %4, align 8
  %8 = call i32 @cdb_findstart(%struct.cdb* %7)
  %9 = load %struct.cdb*, %struct.cdb** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @cdb_findnext(%struct.cdb* %9, i8* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @cdb_findstart(%struct.cdb*) #1

declare dso_local i32 @cdb_findnext(%struct.cdb*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
